--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -10,18 +10,19 @@
             <app-breadcrumbs></app-breadcrumbs>
 
             <!-- Sistema de Rutas -->
+            <router-outlet></router-outlet>
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
 
-                            <router-outlet></router-outlet>
+                            
 
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
